RESOLVED FIXED214074
[WPE][Qt] Deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=214074
Summary [WPE][Qt] Deprecation warnings
Philippe Normand
Reported 2020-07-08 03:47:05 PDT
../../Source/WebKit/UIProcess/API/wpe/qt/WPEQtViewBackend.cpp:303:41: warning: 'y' is deprecated: Use position() [-Wdeprecated-declarations] uint32_t axis = delta.y() == event->y(); ^ /usr/include/QtGui/qevent.h:230:21: note: 'y' has been explicitly marked deprecated here __attribute__ ((__deprecated__("Use position()"))) ^ ../../Source/WebKit/UIProcess/API/wpe/qt/WPEQtViewBackend.cpp:309:16: warning: 'x' is deprecated: Use position() [-Wdeprecated-declarations] event->x(), event->y(), axis, length, modifiers() }; ^ /usr/include/QtGui/qevent.h:228:21: note: 'x' has been explicitly marked deprecated here __attribute__ ((__deprecated__("Use position()"))) ^ ../../Source/WebKit/UIProcess/API/wpe/qt/WPEQtViewBackend.cpp:309:28: warning: 'y' is deprecated: Use position() [-Wdeprecated-declarations] event->x(), event->y(), axis, length, modifiers() }; ^ /usr/include/QtGui/qevent.h:230:21: note: 'y' has been explicitly marked deprecated here __attribute__ ((__deprecated__("Use position()"))) ^ 3 warnings generated. [9/24] Building CXX object Source/WebKit/CMakeFiles/qtwpe.dir/UIProcess/API/wpe/qt/WPEQtView.cpp.o ../../Source/WebKit/UIProcess/API/wpe/qt/WPEQtView.cpp:187:39: warning: 'createTextureFromId' is deprecated: Use createTextureFromNativeObject() instead [-Wdeprecated-declarations] textureNode->setTexture(window()->createTextureFromId(textureId, m_size.toSize(), QQuickWindow::TextureHasAlphaChannel)); ^ /usr/include/QtQuick/qquickwindow.h:162:21: note: 'createTextureFromId' has been explicitly marked deprecated here __attribute__ ((__deprecated__("Use createTextureFromNativeObject() instead"))) ^ 1 warning generated.
Attachments
Patch (3.64 KB, patch)
2020-07-08 03:49 PDT, Philippe Normand
no flags
Patch (3.65 KB, patch)
2020-07-08 03:50 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2020-07-08 03:49:14 PDT
Philippe Normand
Comment 2 2020-07-08 03:50:26 PDT
EWS
Comment 3 2020-07-08 04:19:32 PDT
Committed r264095: <https://trac.webkit.org/changeset/264095> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403768 [details].
Note You need to log in before you can comment on or make changes to this bug.