[WPE][Qt] Deprecation warnings https://bugs.webkit.org/show_bug.cgi?id=214074

Patch by Philippe Normand <pnormand@igalia.com> on 2020-07-08
Reviewed by Carlos Garcia Campos.

* UIProcess/API/wpe/qt/WPEQtView.cpp:
(WPEQtView::updatePaintNode): Switch to new createTextureFromNativeObject API when building against Qt 5.15.
* UIProcess/API/wpe/qt/WPEQtViewBackend.cpp:
(WPEQtViewBackend::dispatchWheelEvent): Switch to new WPE axis 2D event API.

Canonical link: https://commits.webkit.org/226879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264095 268f45cc-cd09-0410-ab3c-d52691b4dbfc